--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll configuration
 
 name: Open Data Science at SIO
-description: Some pithy description or quote?
+description: If the data don't fit, you can't submit (your paper).
 
 # url is currently only used only for the RSS feed in feed.xml
 url: https://Open-Data-Science-at-SIO.github.io/
