Added in author attribution for posts. Tweaked some of the colors around. Slightly more informative sidebar panel. Updated readme with info on author database.

--- a/_config.yml
+++ b/_config.yml
@@ -37,3 +37,17 @@ markdown: kramdown
 gems: ['jekyll-paginate']
 
 exclude: ['README.md', 'LICENSE']
+
+authors:
+  lynn:
+    display_name: Lynn Waterhouse
+    email: lwaterho AT ucsd
+  jessb:
+    display_name: Jessica Blanton
+    email: jmblanton AT ucsd
+  michelle:
+    display_name: Michelle Schorn
+    email: mschorn AT ucsd
+  hao:
+    display_name: Hao Ye
+    email: hye AT ucsd
