added events list reorganized sidebar tweaked formatting corrected minor typos

--- a/_config.yml
+++ b/_config.yml
@@ -51,3 +51,8 @@ authors:
   hao:
     display_name: Hao Ye
     email: hye AT ucsd
+    
+collections:
+  events:
+    output: true
+    permalink: /event/:path/
